css/pensieve.css
.ui-icon-loading {
    background: url(http://code.jquery.com/mobile/1.1.0-rc.1/images/ajax-loader.png);
    background-size: 46px 46px;
    width:46px;
    height:46px;
    -webkit-transform: rotate(360deg);
    -webkit-animation-name: spin;
    -webkit-animation-duration: 1s;
    -webkit-animation-iteration-count:  infinite;
    -webkit-animation-timing-function: linear;
}
@-webkit-keyframes spin {
    from {-webkit-transform: rotate(0deg);}
    to {-webkit-transform: rotate(360deg);}
}

#locked-memories {
    display: none;
}

body {
    overflow-x: hidden;
    font-size: 20px;
    font-family: 'Lantinghei TC';
}

td {
    font-size: 14px;
}

.unlock-param-text {
    margin-top: 10px;
    color: white;
    position: relative;
    /*z-index: 100;*/
    top: -85px;
    left: 10px;
}

.unlock-param-text2 {
    margin-top: 10px;
    color: white;
    position: relative;
    /*z-index: 100;*/
    top: -67px;
    left: 10px;
}

img.top-navi {
    margin-top: 10px;
    position: fixed;
    z-index: 100;
    top: 52px;
    background-color: white;
    height: 51px;
    width: 50%;
}

.lock-icon {
    width: 27px;
    height: 27px;
}

.lock-icon2 {
    width: 40px;
    height: 40px;
}

#unlocked-tab {
    background-image: url('../img/sketch/unlocked-selected.jpg');
    left:0px;
}


#locked-tab {
    background-image: url('../img/sketch/locked-unselected.jpg');
    left:50%;
}

/**** Pages ***/

#landing {
    height: 100%;
    width: 100%;
    position: fixed;
    z-index: 101;
}

#sent {
    display: none;
}

#create {
    display: none;
}

#memory-page {
    display: none;
    position: relative;
}

.page {
    position: absolute;
    top: 62px;
}

/************/

/**** Banner ***/

#main-banner {
    top: 0;
    position: fixed;
    z-index: 100;
}

#alt-banner {
    position: fixed;
    background-color: black;
    width: 100%;
    height: 62px;
    display: none;
    z-index: 100;
}

#banner-close {
    top: 20px;
    left: 10px;
    position: fixed;
}

#banner-next {
    top: 20px;
    right: 10px;
    position: fixed;
}

#banner-text {
    display: inline-block;
    vertical-align: center;
    text-align: center;
    width: 100%;
    height: 62px;
    line-height: 62px;
    font-size: 43px;
    color: white;
}

/************/

/**** Memory Table ****/

div.main-content {
    padding-top: 25px;
    top: 113px;
    height: 100%;
    position: absolute;
    overflow: scroll;
}

#sent-memories {
    top: 62px;
}

div.memory {
    background-color: white;
    opacity: 0.75;
}

table.memory-table {
    border-spacing: 15px;
    border-collapse: separate;
    margin-left: auto;
    margin-right: auto;
    color: black;
}

td.memory-cell {
    background-size: cover;
    min-height: 100%;
    min-width: 100%;
}

.title {
    font-weight: bold;
}

table.memory-table td {
    width: 160px;
    height: 160px;
    vertical-align: bottom;
    background-size: 160px 160px;
}

table#locked-table td {
    background-color: gray;
}

/************/

#media-content {
    width: 100%;
    height: 375px;
    min-height: 100%;
    min-width: 100%;
    background-size: cover;

}




div.bottom-nav {
    position: fixed;
    display: inline-block;
    background-color:black;
    color: white;
    font-size: 20px;
    width: 125px;
    height: 75px;
    line-height: 75px;
    text-align: center;
    bottom: 0;
}

/**** Create options ****/

div.create-options {
    position: fixed;
    background-color: #F78B0D;
    color: white;
    font-size: 20px;
    width: 125px;
    height: 75px;
    left:125px;
    line-height: 75px;
    border-color: white;
    border-width: 4px;
    border-style: solid;
    text-align: center;
}

#photo-btn {
    bottom: 225px;
}
#video-btn {
    bottom: 150px;
}
#sound-btn {
    bottom: 75px;
}

/**** Bottom Navigation ****/

#inbox-btn {

}

#create-btn {
    left:125px;
    background-color: #F78B0D;
    border-color: white;
    border-width: 4px;
    border-style: solid;
}

#sent-btn {
    left:250px;
}

.selected-btn {
    border-bottom-style: solid;
    border-bottom-color: #F78B0D;
    border-bottom-width: 9px;
}

/**** Create Navigation ****/
div.create-nav {
    background-repeat: no-repeat;
    background-position: center;
    display: none;
    position: fixed;
    height: 51px;
    width: 94px;
    top: 62px;
}

#media {
    left:0px;
    background-image: url('../img/sketch/media-selected.png');
}
#share {
    left:94px;
    background-image: url('../img/sketch/share-unselected.png');
}
#condition {
    left:188px;
    background-image: url('../img/sketch/condition-unselected.png');
}
#send {
    right:0px;
    background-image: url('../img/sketch/send-unselected.png');
}

